Fixed privacy bug, added edited badge, auto-add badge + new visibility

--- a/scss/_posts-comments.scss
+++ b/scss/_posts-comments.scss
@@ -93,6 +93,11 @@ article.post>header .post-header-right {
     overflow: hidden;
     width: 100%;
     justify-content: center;
+
+    .post-edited {
+        font-variant: small-caps;
+        text-transform: lowercase;
+    }
 }
 
 article.post>header h2.author-name {
